# starcar

./: README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yaml
kubernetes/: README.md
kubernetes/prod/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  roles.yaml  service.yaml
kubernetes/test/: configmap.yaml  deployment.yaml  roles.yaml  service.yaml
services/analysis/: docker-compose.yml
services/analysis/analysis_1/: Dockerfile
services/analysis/analysis_1/src/: analysis.py
services/analysis/starcar_api/: README.md  pyproject.toml
services/analysis/starcar_api/starcar/: __init__.py  api.py
services/backend/: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  Dockerfile.prod  cli.py  requirements.prod.txt  requirements.txt  run.py
services/backend/starcar/: __init__.py  auth.py  flask_jwt.py  models.py  routes.py  sockets.py  utils.py
services/backend/starcar/analysis_controller/: analysis_runner.py
services/backend/starcar/analysis_runner/: __init__.py  kube_analysis_runner.py  mock_analysis_runner.py
services/frontend/: .dockerignore  Dockerfile  Dockerfile.prod  eslint.config.mjs  package-lock.json  package.json  pass.json  tsconfig.json
services/frontend/src/: config.ts  middleware.ts
services/frontend/src/app/: globals.css  layout.tsx
services/frontend/src/components/: form-error.tsx  form-group.tsx
services/frontend/src/lib/: api.ts  dataUtils.ts  mapUtils.ts  utils.ts
services/frontend/src/types/: api-key.ts  data.ts  error-message.ts  mission.ts
(+35 files in other folders)
